added sky logo and updated background image

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Homepage</title>
 </head>
 
 <body>
+    <img src="transparent logo.webp" alt="sky logo" width="200px" height="100px">
     <h1 class="iconTitle">Project Presentation Website</h1>
 
     <ul>
