--- a/agile_design.html
+++ b/agile_design.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Agile Project Management and Scrum</title>
+        <title>Agile Methodologies & Design Thinking</title>
         <style>
             body {
                 font-family: Arial, sans-serif;
@@ -23,6 +23,7 @@
 
     <!--- Olivia and David to work on this page Agile DSDM, Scrum, Design Thinking Process-->
     <body>
+        <div class="section1" id="agile-dsdm">
         <header>
             <h1>Agile Project Management and Scrum</h1>
         </header>
@@ -57,6 +58,25 @@
         <footer>
             <p>For more information about DSDM and Agile Project Management, visit <a href="https://www.dsdm.org/" target="_blank">DSDM.org</a>.</p>
         </footer>
+        </div>
+
+        <div class="section2" id="scrum">
+
+                <!--- Scrum Content here -->
+
+
+
+        </div>
+
+        <div class="section3" id="Design_Thinking">
+
+            <!--- Scrum content here -->
+
+
+        </div>
+
+
+
     </body>
 </html>
   
