amendment to header

--- a/agile_design.html
+++ b/agile_design.html
@@ -25,7 +25,7 @@
     <body>
         <div class="section1" id="agile-dsdm">
         <header>
-            <h1>Agile Project Management and Scrum</h1>
+            <h1>Agile Project Management DSDM</h1>
         </header>
         <main>
             <section>
@@ -61,16 +61,17 @@
         </div>
 
         <div class="section2" id="scrum">
-
                 <!--- Scrum Content here -->
+            <h1>Scrum</h1>
 
 
 
         </div>
 
         <div class="section3" id="Design_Thinking">
-
-            <!--- Scrum content here -->
+            <!--- Design Thinking content here -->
+            <h1>Design Thinking Process</h1>
+           
 
 
         </div>
