added some more styling

--- a/python_flask.html
+++ b/python_flask.html
@@ -13,6 +13,8 @@
 <!-- need to add header and footer -->
 
 <style>
+    
+
     /* styling for white textbox */
     .textbox {
         background-color: white;
@@ -21,6 +23,14 @@
         border-radius: 50px;
         margin: 0px 40px 10px 40px;
         overflow: hidden;
+        border: #0072c9;
+        border-style: solid;
+        border-width: 10px;
+    }
+
+    ul {
+        margin-right: 70px;
+        margin-left: 10px; 
     }
 
     /* styling for title: 'Python Programming & Flask' */
@@ -37,9 +47,9 @@
     
     /* styling for images div */
     .images {
-        margin: -500px 0px 0px 900px;
+        margin: -500px 0px -400px 900px;
         width: 50px;
-        /* padding: 100px; */
+        padding: 100px;
 
     }
 
@@ -48,7 +58,8 @@
     .screenshots {
         height: 500px;
         width: 500px;
-        margin-top: -50px;
+        margin-top: -150px;
+        margin-left: 200px;
     }
 
 
