--- a/agile_design.html
+++ b/agile_design.html
@@ -30,9 +30,11 @@
     .section2 p {
             text-align: center;
         }
-    .section2 p:nth-child(3) {
+    .section2 p:nth-child(4) {
             text-align: left;
+            
         }
+
     .section3 h2 {
             text-align: center;
         }
@@ -86,12 +88,16 @@
         <div class="section2" id="scrum">
                 <!--- Scrum Content here -->
             <h2>Scrum</h2>
+        
+        <img src="Scrum_Pillars.jpeg" alt="Scrum Pillars" style="max-width: 25%; float: right; margin-left: 20px;">
+
         <p>'Scrum is a lightweight framework that helps people, teams and organisations generate value through adaptive solutions for complex problems.'</p>
 
         <p>Scrum is an agile framework that focuses on iterative development and collaboration. It divides projects into fixed duration iterations called sprints, cross functional teams work to deliver a shipable increment of the product. Scrum emphasizes adaptability, transparency, and continuous improvement through regular meetings Daily Scrum, Sprint Planning, Sprint Review and Sprint Retrospective. Scrum has weel defined roles Scrum Master, Product Owner and Developers. Scrum is rooted in software development but could be applied to all all complex projects.
         </p>  
-
-
+        <br>
+        <br>
+        <br>
 
         </div>
 
