--- a/agile_design.html
+++ b/agile_design.html
@@ -10,6 +10,19 @@
     </head>
     <style>
         /*styling for title: AgilePm DSDM, Scrum & Design Thinking Process */
+    .section1, .section2, .section3 {
+        background-color:rgba(255, 255, 255, 1);
+        padding: 20px;
+    }
+    
+    body {
+        background-image:url("sky_background2.jpeg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+
+    }
+
     .section1 h1 {
             font-size: 30pt;
             margin-top: 50px;
@@ -113,6 +126,9 @@
             <p>For more information about DSDM and Agile Project Management, visit <a href="https://www.dsdm.org/" target="_blank">DSDM.org</a>.</p>
         </footer>
         </div>
+        <br>
+        <br>
+        <br>
         <br>
 
         <div class="section2" id="scrum">
@@ -272,11 +288,14 @@
                 </tbody>
             </table>
             <br>
-        <h3>How we applied Scrum</h3>
+        <h3>Applied 'Scrum'</h3>
         <p>Initally we allocatd roles, one person assumed the role of product owner taking ownership of the product backlog, the remaining four members of the team rotated the scrum master role. All members of the team assumed the role of developer. We used four one week sprints, daily standups took place Monday - Friday via online video conferencing with cameras on. Sprint planning and estimation was based on hours, each developer showcased their work during sprint reviews and amended any work based on feedback. Sprint retrospectives highlighted process improvements which we put into the sprint backlog to apply during the next sprint. We developed Iteratively and delivered incrementally.  
         </p>
 
         </div>
+        <br>
+        <br>
+        <br>
         <br>
 
         <div class="section3" id="Design_Thinking">
@@ -291,7 +310,7 @@
         <br>
         <br>
         <br>
-        <h3>How we applied Design Thinking Process</h3>
+        <h3>Applied 'Design Thinking Process'</h3>
         <p>The design thinking process is made up of the problem space and the solution space and can be broken down into the following phases. 
             <ol>
             <li>
@@ -320,9 +339,9 @@
           One of the key pain points identified was 'fragmented learning experience'.
         </p>
 
-
         </div>
-
+        <br>
+        <br>
 
 
     </body>
