about us page html and css included here

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <img src="transparent logo.webp" alt="sky logo" width="200px" height="120px">
-    <h1 class="iconTitle">Project Presentation Website</h1>
+    <h1 class="pageTitle">Project Presentation Website</h1>
 
     <div id="pages">
         <ul id="pageList">
@@ -24,13 +24,15 @@
     </div>
 
     <h2>Welcome the Technophobes</h2>
-    <ul>
-        <li>Faieq</li>
-        <li>Olivia</li>
-        <li>David</li>
-        <li>Crisilda</li>
-        <li>Sana</li>
-    </ul>
+    <div id="teamNames">
+        <ul>
+            <li>Faieq</li>
+            <li>Olivia</li>
+            <li>David</li>
+            <li>Crisilda</li>
+            <li>Sana</li>
+        </ul>
+    </div>
 
     <div id="introP">
         <p>Sky have provided the technophobes with the amazing opportunity to present all that we have learnt during this bootcamp </p>
