--- a/aboutUs.html
+++ b/aboutUs.html
@@ -35,7 +35,7 @@
         </div>
         <div class="teamMember">
             <h2>David Guest</h2>
-            <p class="descrip">Background: Electrical and Electronic Engineering<br>Motivations To work with complex technologies and hone skills in software development</p>
+            <p class="descrip">Background: Communications and Broadband Engineer<br>Motivations to work in Agile and Scrum environments on at both tactical and strategic levels.</p>
         </div>
         <div class="teamMember">
             <h2>Olivia Vail</h2>
