added some styling and added my info

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -11,9 +11,12 @@
 </head>
 
 <body>
-    
-    <img src="transparent logo.webp" alt="sky logo" width="200px" height="120px">
-
+    <div class="header_flexbox">
+        <img src="transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo">
+        <div class="Technophobes">
+            <h3>Technophobes</h3>
+        </div>
+    </div>
     <div id="pages">
         <ul id="pageList">
             <li class="otherPages" id="aboutUs">About Us</li>
@@ -31,23 +34,23 @@
     <div class="teams">
         <div class="teamMember">
             <h2>Faieq Rahman</h2>
-            <p class="descrip">Background: Electrical and Electronic Engineering<br>Motivations To work with complex technologies and hone skills in software development</p>
+            <p class="descrip"><strong>Background:</strong> Electrical and Electronic Engineering<br><strong>Motivations:</strong>  To work with complex technologies and hone skills in software development</p>
         </div>
         <div class="teamMember">
             <h2>David Guest</h2>
-            <p class="descrip">Background: Communications and Broadband Engineer<br>Motivations to work in Agile and Scrum environments at tactical and strategic levels.</p>
+            <p class="descrip"><strong>Background:</strong> Communications and Broadband Engineer<br><strong>Motivations:</strong> to work in Agile and Scrum environments at tactical and strategic levels.</p>
         </div>
         <div class="teamMember">
             <h2>Olivia Vail</h2>
-            <p class="descrip">Background: Electrical and Electronic Engineering<br>Motivations To work with complex technologies and hone skills in software development</p>
+            <p class="descrip"><strong>Background:</strong> Electrical and Electronic Engineering<br><strong>Motivations:</strong> To work with complex technologies and hone skills in software development</p>
         </div>
         <div class="teamMember">
             <h2>Crisilda Jojo</h2>
-            <p class="descrip">Background: Electrical and Electronic Engineering<br>Motivations To work with complex technologies and hone skills in software development</p>
+            <p class="descrip"> <strong>Background:</strong> Accounting and Finance at University, Python Internship at Sky<br><strong>Motivations:</strong> To explore technical roles particularly software development</p>
         </div>
         <div class="teamMember">
             <h2>Sana Jamal</h2>
-            <p class="descrip">Background: Electrical and Electronic Engineering<br>Motivations To work with complex technologies and hone skills in software development</p>
+            <p class="descrip"><strong>Background:</strong> Electrical and Electronic Engineering<br><strong>Motivations:</strong> To work with complex technologies and hone skills in software development</p>
         </div>
 
     </div>
