corrected some styling errors

--- a/python_flask.html
+++ b/python_flask.html
@@ -48,9 +48,9 @@
     z-index: 1;
     } */
 
-    .logo {
+    /* .logo {
         margin-left: 10px;
-    } 
+    }  */
 
     .Technophobes{
         color: white;
@@ -68,7 +68,7 @@
 
     .header_flexbox {
         display: flex;
-        justify-content: space-between;
+    
     }
 
         /* nav bar styling */
@@ -176,7 +176,7 @@
         background-color: white;
         color: black;
         justify-content: center;
-        margin: 300px 10px 10px 910px;
+        margin: 300px 10px 10px 1150px;
         overflow: hidden;
         border: #0072c9;
         border-style: solid;
@@ -203,7 +203,8 @@
     
     /* styling for images div */
     .images {
-        margin: -700px 0px -375px 600px;
+        position: inherit;
+        margin: -700px -600px -375px 900px;
         width: 50px;
         padding: 100px;
 
