agile_design.html

--- a/agile_design.html
+++ b/agile_design.html
@@ -13,8 +13,8 @@
     <header>
         <div class="header-content" id="header-content">
         <div class="logo" id="logo">
-    <img src="transparent logo.webp" alt="sky logo" width="200px" height="120px";> 
-    <h1 style="display:inline">Agile DSDM, Scrum & The Design Thinking Process</h1>
+    <img src="transparent logo.webp" alt="sky logo" width="160px" height="80px";> 
+    <h2 style="display: inline";>Agile DSDM, Scrum & The Design Thinking Process</h2>
         <div class="Technophobes" id="Technophobes">
         <h3>Technophobes</h3>
         <div class="Page_Header" id="Page_Header">
@@ -31,9 +31,10 @@
     </header>
     <br>
     <br>
+    <br>
     <div class="section1" id="agile-dsdm">
        
-                <h2>Agile Project Management DSDM</h2>
+                <h1>Agile Project Management DSDM</h1>
                 <h3>What is Agile Project Management?</h3>
                 <p><em> An iterative and incremental approach to managing projects. It emphasizes collaboration, flexibility, and delivering value to customers.</em> What this means:
                     <br> 
