--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="pages">
         <ul id="pageList">
             <li class="otherPages" id="aboutUs">About Us</li>
-            <li class="otherPages"  id="help">Help</li>
+            <li class="otherPages"  id="resources">Resources</li>
             <li class="otherPages" id="privacy">Privacy</li>
             <li class="otherPages" id="legal">Legal</li> 
         </ul>
