changed help to resources

--- a/agile_design.html
+++ b/agile_design.html
@@ -26,7 +26,7 @@
          <div id="pages"> 
         <ul id="pageList">
             <li class="otherPages" id="aboutUs">About Us</li>
-            <li class="otherPages"  id="help">Help</li>
+            <li class="otherPages"  id="resources">Resources</li>
             <li class="otherPages" id="privacy">Privacy</li>
             <li class="otherPages" id="legal">Legal</li> 
         </ul>
