--- a/aboutUs.html
+++ b/aboutUs.html
@@ -20,7 +20,7 @@
     <div id="pages">
         <ul id="pageList">
             <li class="otherPages" id="aboutUs">About Us</li>
-            <li class="otherPages"  id="help">Resources</li>
+            <li class="otherPages"  id="resources">Resources</li>
             <li class="otherPages" id="privacy">Privacy</li>
             <li class="otherPages" id="legal">Legal</li> 
         </ul>
