changes to About Us and Home page, also halfway through web dev page

--- a/index.html
+++ b/index.html
@@ -11,11 +11,20 @@
 </head>
 
 <body>
-    <img src="transparent logo.webp" alt="sky logo" width="200px" height="120px">
+
+    <div class="header_flexbox">
+        <!-- picture of sky logo -->
+        <img src="transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo">
+
+        <div class="Technophobes">
+            <h3>Technophobes</h3>
+        </div>
+    </div>
+    
     <h1 class="pageTitle">Project Presentation Website</h1>
 
     <div id="pages">
-        <ul id="pageList">
+        <ul id="pageList" >
             <li class="otherPages" id="aboutUs">About Us</li>
             <li class="otherPages"  id="resources">Resources</li>
             <li class="otherPages" id="privacy">Privacy</li>
@@ -23,7 +32,7 @@
         </ul>
     </div>
 
-    <h2>Welcome the Technophobes</h2>
+    <h2 id="intro">Welcome the Technophobes</h2>
     <div id="teamNames">
         <ul>
             <li>Faieq</li>
