--- a/aboutUs.html
+++ b/aboutUs.html
@@ -52,7 +52,10 @@
             <h2>Sana Jamal</h2>
             <p class="descrip"><strong>Background:</strong> Electrical and Electronic Engineering<br><strong>Motivations:</strong> To work with complex technologies and hone skills in software development</p>
         </div>
+    </div>
 
+    <div class="Page_Footer" id= "Page_Footer">
+        <p style="margin-top: 20px; margin-bottom: 20px;">&copy; 2023 Technophobes. All Rights Reserved</p>
     </div>
 
 </body>
