caption text amended

--- a/V2_agile_design.html
+++ b/V2_agile_design.html
@@ -76,14 +76,14 @@
             <img src="baby alien.jpg" alt = "DSDM Flow" class="DSDM_Flow" style="height: 200px; width:auto;">
             <br>
             <div class="img-caption">
-                <p style="margin-left: 5px; margin-right: 5px;">Image of Agile DSDM, Phases and DSDM Products.</p>
+                <p style="margin-left: 5px; margin-right: 5px;">Image of 'The Baby Alein' DSDM roles.</p>
             </div>
         </div>
         <div class="DSDM_Image3">
             <img src="Project_Timeline.jpeg" alt = "DSDM Flow" class="DSDM_Flow" style="height: 200px; width:300px;">
             <br>
             <div class="img-caption">
-                <p style="margin-left: 5px; margin-right: 5px;">Image of Agile DSDM, Phases and DSDM Products.</p>
+                <p style="margin-left: 5px; margin-right: 5px;">Image of our Project Timeline.</p>
             </div>
         </div>
             
@@ -118,7 +118,7 @@
             <img src="Scrum_Values.jpeg" alt = "Scrum Flow" class="Scrum_Flow" style="height: 140px; width:auto;">
             <br>
             <div class="img-caption">
-                <p style="margin-left: 5px; margin-right: 5px;">Image representing the scrum sprint with scrum artefacts.</p>
+                <p style="margin-left: 5px; margin-right: 5px;">Image showing Scrum values.</p>
             </div>
         </div>
         <br>
@@ -126,7 +126,7 @@
             <img src="Scrum_Pillars.jpeg" alt = "Scrum Flow" class="Scrum_Flow" style="height: 140px; width:aut;">
             <br>
             <div class="img-caption">
-                <p style="margin-left: 5px; margin-right: 5px;">Image representing the scrum sprint with scrum artefacts.</p>
+                <p style="margin-left: 5px; margin-right: 5px;">Image showing Scrum Pillars.</p>
             </div>
         </div>
         <br>
