--- a/resources_page.html
+++ b/resources_page.html
@@ -139,8 +139,8 @@
     height: 25vw;
     border-radius:30px;
     perspective:1000px;
-    border-style: solid;
-    border-radius: 30px;
+    /* border-style: solid;
+    border-radius: 30px; */
     margin-left: 10vw;
 }
 .card{
@@ -158,8 +158,13 @@
     border-radius:30px;
     color: black;
     font-style: bold;
-    margin-left: 50px;
+    margin-left: 30px;
     padding: 10px;
+    width: 25%;
+    border-color: #0072c9;
+    border-style: solid;
+    border-radius: 30px; 
+    border-width: 5px;
     /* justify-content: center; */
     /* align-items: center; */
 
@@ -175,7 +180,16 @@
 
 .link_card {
     display: flex;
+    background-color: white;
+    color: black;
+    margin: 30px;
+    border-radius: 20px;
+    margin-top: 5px;
 } 
+
+p {
+    margin: 30px;
+}
 
 </style>
 
@@ -250,7 +264,7 @@
                     <h2>Python 3 Programming</h2>
                 </div>
                 <div class="link_card">
-                    <p>idsjflkajsdlkfjhas;dhfj</p>
+                    <p><a href="https://docs.python.org/3/">https://docs.python.org/3/</a></p>
                 </div>     
             </div>
         </div>
