changed width of title boxes

--- a/resources_page.html
+++ b/resources_page.html
@@ -135,7 +135,7 @@
     display:flex;
     justify-content: space-around;
     align-items: space-around;
-    width: 75vw;
+    width: auto;
     height: 25vw;
     border-radius:30px;
     perspective:1000px;
