--- a/resources_page.html
+++ b/resources_page.html
@@ -140,7 +140,7 @@
     margin-right: 20vw;
     margin-left: 25vw;
     margin-top: -30px;
-    margin-bottom: 50px;
+    /*margin-bottom: 50px; */
     border-color: #ff2744;
     border-style: solid;
     border-width: 5px;
@@ -291,6 +291,8 @@ li {
                     <ul>
                         <li><a href="https://store.apmg-international.com/study-materials/agile-business-analysts">AMPG 'Agile Business Analyst Handbook'</a></li>
                         <li><a href="https://shop.bcs.org/store/221/detail/workgroup?id=3-221-9781780175102">BCS (British Computer Society) 'Business Analysis 4th Edition</a></li>
+                        <li><a href="https://www.qa.com/course-catalogue/courses/practical-business-analysis-standard-qapba3/">QA course</a></li>
+
                     </ul>
                 </div>    
             </div>
@@ -304,9 +306,12 @@ li {
                 </div>
                 <div class="link_card">
                     <ul>
-                    <li><a href="https://www.w3schools.com/html/"">HTML</a></li>
-                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS"">CSS</a></li>
-                    </ul>
+                    <li><a href="https://www.w3schools.com/html/">HTML</a></li>
+                    <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a></li>
+                    <li><a href="https://www.w3schools.com/js/">JavaScript</a></li>
+                    <li><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/">FreeCodeCamp - Interactive Learning</a></li>
+                    
+                </ul>
                 </div>    
             </div>
         </div>
@@ -318,7 +323,11 @@ li {
                     <h2>Python 3 Programming</h2>
                 </div>
                 <div class="link_card">
-                    <p><a href="https://docs.python.org/3/">https://docs.python.org/3/</a></p>
+                    <ul>
+                    <li><a href="Python Documentation">Python Documentation</a></li>
+                    <li><a href="https://www.freecodecamp.org/learn/scientific-computing-with-python/">FreeCodeCamp - Interactive Learning</a></li>
+
+                    </ul>
                 </div>     
             </div>
         </div>
@@ -330,7 +339,11 @@ li {
                     <h2>Secure by Design</h2>
                 </div>
                 <div class="link_card">
-                    <p>idsjflkajsdlkfjhas;dhfj</p>
+                    <ul>
+                        <li><a href="https://www.comptia.org/certifications/security">Comptia Security+</a></li>
+                        <li><a href="https://www.wiley.com/en-gb/CompTIA+Security%2B+Study+Guide%3A+Exam+SY0+601%2C+8th+Edition-p-9781119736264>">Comptia Security+ Study Guide</a></li>
+
+                    </ul>
                 </div>   
     </div>
 </div>
