--- a/resources_page.html
+++ b/resources_page.html
@@ -250,8 +250,8 @@ li {
         <h1 style="text-align: center; font-size: 30pt; margin-top: -20px;">Resources</h1>
         <div>
         <p id="miroboard">
-            <strong style="font-size: 20pt;">Miro Board: </strong>
-            <a href="https://miro.com/app/board/uXjVMs8V3HI=/?share_link_id=66356533388">https://miro.com/app/board/uXjVMs8V3HI=/?share_link_id=66356533388</a>
+            <!-- <strong style="font-size: 20pt;">Miro Board: </strong> -->
+            <a href="https://miro.com/app/board/uXjVMs8V3HI=/?share_link_id=66356533388" style="font-size: 20pt; font-style: bold;">Technophobes Miro Board</a>
         </p>
         </div>
     </header>    
