web dev website completed

--- a/webDev.html
+++ b/webDev.html
@@ -34,44 +34,49 @@
     <p>Web Development is all about websites and applications that are accessed through the internet and can run on a browser</p>
     <p>All the websites and apps that are accessed through browsers such as Chrome are built by the technologies stated within this page.</p>
 
-    <div id="firstInfo">
-        <h2 class="infoHeadings">How we applied our knowledge to the project:</h2>
-        <ul>
-            <li>HTML is used to apply the structure of the website.</li>
-            <li>CSS is used to style each page of a website.</li>
-            <li>JavaScript is used to add the functionality to the website</li>
-        </ul>
-        <h3 class="infoHeadings">HTML was used as follows:</h3>
+    <div id="topHalf">
+        <div id="firstInfo">
+            <h2 class="infoHeadings">How we applied our knowledge to the project:</h2>
             <ul>
-                <li>Headings are part of HTML and are used to give titles to different parts of a webpage such as the title and various other sections, <br> and they range from "h1" through to "h6" where "h1" is the largest heading, "h4" is a heading the same size as the as a paragraph, and "h6" is the smallest size of a heading</li>
-                <li>Lists are also part of HTML and are a collection of items that can be either unordered, denoted as "ul" and bullet-pointed, or ordered, denoted as "ol" and numbered.</li>
-                <li>Images are added through the use of the "img" tag, and this allows for a image to be inserted from using a link from the internet, or using linking to a picture from the projects directory</li>
+                <li>HTML is used to apply the structure of the website.</li>
+                <li>CSS is used to style each page of a website.</li>
+                <li>JavaScript is used to add the functionality to the website</li>
             </ul>
-        <h3 class="infoHeadings">CSS was used as follows:</h3>
-        <ul>
-            <li>Selectors are a vital component of CSS, and these allow for styling of the a collection of elements that are the same, or elements grouped within the same class</li>
-            <li>The "background-image" property is a property which let the background of the website be the image that we chose, instead of a regular color</li>
-            <li>The "width" and the "height" property lets you adjust the size of a specific element, whilst "margin" allows for adjustment of the position of an element on a webpage.</li>
-            <li>The "display" property, can be set to "relative" or "absolute", where "relative" means a element will move to places relative to its original place within the webpage, and "absolute" means that the element can move exactly where you define the element to move to</li>
-        </ul>
-        <h3 class="infoHeadings">Javascript can be used as follows:</h3>
-        <ul>
-            <li>Variables are containers for data that can be used in different parts of a program, and they can store different types of data such as a string, number, and a boolean</li>
-            <li>Conditionals are blocks of code that execute a specific piece of code depending on a predefined condition being met, and these come in the form of a "if" statement</li>
-            <li>Loops are blocks that can repeat a portion of code a specified amount of times, and these are expressed in the form of a "for" or a "while" statement</li>
-            <li>Functions are a useful part of JS Programming that allows for a block of code to be repeated when a defined function has been called within the program</li>
-        </ul>
+            <h3 class="infoHeadings">HTML was used as follows:</h3>
+                <ul>
+                    <li>Headings are part of HTML and are used to give titles to different parts of a webpage such as the title and various other sections, <br> and they range from "h1" through to "h6" where "h1" is the largest heading, "h4" is a heading the same size as the as a paragraph, and "h6" is the smallest size of a heading</li>
+                    <li>Lists are also part of HTML and are a collection of items that can be either unordered, denoted as "ul" and bullet-pointed, or ordered, denoted as "ol" and numbered.</li>
+                    <li>Images are added through the use of the "img" tag, and this allows for a image to be inserted from using a link from the internet, or using linking to a picture from the projects directory</li>
+                </ul>
+            <h3 class="infoHeadings">CSS was used as follows:</h3>
+            <ul>
+                <li>Selectors are a vital component of CSS, and these allow for styling of the a collection of elements that are the same, or elements grouped within the same class</li>
+                <li>The "background-image" property is a property which let the background of the website be the image that we chose, instead of a regular color</li>
+                <li>The "width" and the "height" property lets you adjust the size of a specific element, whilst "margin" allows for adjustment of the position of an element on a webpage.</li>
+                <li>The "display" property, can be set to "relative" or "absolute", where "relative" means a element will move to places relative to its original place within the webpage, and "absolute" means that the element can move exactly where you define the element to move to</li>
+            </ul>
+            <h3 class="infoHeadings">Javascript can be used as follows:</h3>
+            <ul>
+                <li>Variables are containers for data that can be used in different parts of a program, and they can store different types of data such as a string, number, and a boolean</li>
+                <li>Conditionals are blocks of code that execute a specific piece of code depending on a predefined condition being met, and these come in the form of a "if" statement</li>
+                <li>Loops are blocks that can repeat a portion of code a specified amount of times, and these are expressed in the form of a "for" or a "while" statement</li>
+                <li>Functions are a useful part of JS Programming that allows for a block of code to be repeated when a defined function has been called within the program</li>
+            </ul>
+            <h3 class="infoHeadings">Descriptions for each of the images are shown below</h3>
+            <p> The number for each description corresponds with the image number going from the top to the bottom.</p>
+            <ol>
+                <li>This shows the general format of a HTML element, where there is an opening tag, a closing tag, and then the content for the tag.</li>
+                <li>The format for applying CSS is as shown, where the selector wraps the different properties that will style the element</li>
+                <li>A function is a key part of javascript programming which allows for a block of code to be executed at different parts of a program.</li>
+            </ol>
+        </div>
+
+        <div class="images">
+            <img class="img" src="https://cdo-curriculum.s3.amazonaws.com/media/uploads/html_element.png" alt="">  
+            <img class="img" src="https://web-dev.imgix.net/image/VbAJIREinuYvovrBzzvEyZOpw5w1/hFR4OOwyH5zWc5XUIcyu.svg" alt="">  
+            <img class="img" id="jsFunction" src="https://www.programiz.com/sites/tutorial2program/files/javascript-return-statement.png" alt="" background-color:white>   
+        </div>
     </div>
-
-    <div class="images">
-        <img src="https://cdo-curriculum.s3.amazonaws.com/media/uploads/html_element.png" alt="">  
-        <img src="https://web-dev.imgix.net/image/VbAJIREinuYvovrBzzvEyZOpw5w1/hFR4OOwyH5zWc5XUIcyu.svg" alt="">  
-        <img id="jsFunction" src="https://www.programiz.com/sites/tutorial2program/files/javascript-return-statement.png" alt="" background-color:white>   
-    </div>
- 
-    
-
-
 
     <div class="Page_Footer" id= "Page_Footer">
         <p style="margin-top: 20px; margin-bottom: 20px;">&copy; 2023 Technophobes. All Rights Reserved</p>
