--- a/resources_page.html
+++ b/resources_page.html
@@ -132,37 +132,42 @@
 }
 
 #miroboard {
+    font-size: 35pt;
+    /* background-color: white; */
     text-align: center;
-    background-color: white;
     border-radius: 20px;
     padding: 0.5vw;
-    color: black;
+    color: ;
     margin-right: 20vw;
     margin-left: 25vw;
     margin-top: -30px;
     /*margin-bottom: 50px; */
-    border-color: #ff2744;
+    /* border-color: #ff2744;
     border-style: solid;
-    border-width: 5px;
+    border-width: 5px; */
     width: auto;
 }
 
 #container1,#container2,#container3,#container4,#container5{
     display:flex;
-    justify-content: space-around;
-    align-items: space-around;
-    width: auto;
+    flex-direction: row;
+    /* justify-content: space-around;
+    align-items: space-around; */
+    /* width: 50vw; */
     height: 25vw;
     border-radius:30px;
     perspective:1000px;
     /* border-style: solid;
     border-radius: 30px; */
-    margin-left: 10vw;
+    margin-left: 5vw;
+    margin-top: 10px;
+    margin-bottom: -100px;
+    padding: ;
 }
 .card{
     /* position:relative; */
     /* display:flex; */
-    width: 100%;
+    width: 100;
     height: 100%;
     justify-content: center;
     align-items: center;
@@ -176,7 +181,7 @@
     font-style: bold;
     margin-left: -40px;
     padding: 10px;
-    width: 25%;
+    width: 10vw;
     border-color: #0072c9;
     border-style: solid;
     border-radius: 30px; 
@@ -206,6 +211,7 @@
     margin-left: -40px;
     border-color: red;
     border-style: solid;
+    width: 20vw;
     
    
 } 
@@ -247,11 +253,11 @@ li {
             </ul>
         </div>
 
-        <h1 style="text-align: center; font-size: 30pt; margin-top: -20px;">Resources</h1>
+        <h1 style="text-align: center; font-size: 50pt; margin-top: -20px;">Resources</h1>
         <div>
         <p id="miroboard">
             <!-- <strong style="font-size: 20pt;">Miro Board: </strong> -->
-            <a href="https://miro.com/app/board/uXjVMs8V3HI=/?share_link_id=66356533388" style="font-size: 20pt; font-style: bold;">Technophobes Miro Board</a>
+            <a href="https://miro.com/app/board/uXjVMs8V3HI=/?share_link_id=66356533388" style="font-size: 40pt; font-style: bold; color:rgb(144, 94, 144); margin-right: 100px;">Technophobes Miro Board</a>
         </p>
         </div>
     </header>    
