--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     
-    <h1 class="pageTitle">Project Presentation Website</h1>
+    <h1 class="pageTitle">Welcome to the Technophobes</h1>
 
     <div id="pages">
         <ul id="pageList" >
@@ -32,14 +32,14 @@
         </ul>
     </div>
 
-    <h2 id="intro">Welcome the Technophobes</h2>
+    <!-- <h2 id="intro">Welcome the Technophobes</h2> -->
     <div id="teamNames">
-        <ul>
-            <li>Faieq</li>
-            <li>Olivia</li>
-            <li>David</li>
-            <li>Crisilda</li>
-            <li>Sana</li>
+        <ul id="teamList">
+            <li class="name">Faieq</li>
+            <li class="name">Olivia</li>
+            <li class="name">David</li>
+            <li class="name">Crisilda</li>
+            <li class="name">Sana</li>
         </ul>
     </div>
 
@@ -107,6 +107,9 @@
         </div>
     </div>
 
+    <div class="Page_Footer" id= "Page_Footer">
+        <p style="margin-top: 20px; margin-bottom: 20px;">&copy; 2023 Technophobes. All Rights Reserved</p>
+    </div>
 
 </body>
 </html>
