new legal changes

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -42,7 +42,7 @@
         </div>
         <div class="teamMember">
             <h2>Olivia Vail</h2>
-            <p class="descrip"><strong>Background:</strong> Electrical and Electronic Engineering<br><strong>Motivations:</strong> To work with complex technologies and hone skills in software development</p>
+            <p class="descrip"><strong>Background:</strong> Philosophy, Politics and Economics at University<br><strong>Motivations:</strong> To explore as much of the tech world as possible! Especially interested in gaining technical coding skills and understanding the strategic side of tech.</p>
         </div>
         <div class="teamMember">
             <h2>Crisilda Jojo</h2>
