--- a/python_flask.html
+++ b/python_flask.html
@@ -154,6 +154,7 @@
         color: white;
         text-decoration: none;
     }
+    
     h1{
         font-size: 50px;
     }
@@ -281,7 +282,7 @@
                 <li class="otherPages"  id="resources"><a href="resources_page.html">Resources</a></li>
                 <li class="otherPages" id="legalprivacy"><a href="legal_page.html">Legal & Privacy</a></li>
             </ul>
-        
+        </div>
 
 
     </header>
