--- a/aboutUs.html
+++ b/aboutUs.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="header_flexbox">
-        <img src="transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo">
+        <a href="/index.html"><img src="transparent logo.webp" alt="sky logo" width="100px" height="60px" class="logo"></a>
         <div class="Technophobes">
             <h3>Technophobes</h3>
         </div>
@@ -42,7 +42,7 @@
         </div>
         <div class="teamMember">
             <h2>Olivia Vail</h2>
-            <p class="descrip"><strong>Background:</strong> Electrical and Electronic Engineering<br><strong>Motivations:</strong> To work with complex technologies and hone skills in software development</p>
+            <p class="descrip"><strong>Background:</strong> Philosophy, Politics & Economics<br><strong>Motivations:</strong> To work with complex technologies and hone skills in software development</p>
         </div>
         <div class="teamMember">
             <h2>Crisilda Jojo</h2>
@@ -50,7 +50,7 @@
         </div>
         <div class="teamMember">
             <h2>Sana Jamal</h2>
-            <p class="descrip"><strong>Background:</strong> Electrical and Electronic Engineering<br><strong>Motivations:</strong> To work with complex technologies and hone skills in software development</p>
+            <p class="descrip"><strong>Background:</strong> Geography<br><strong>Motivations:</strong> To work with complex technologies and hone skills in software development</p>
         </div>
     </div>
 
