--- a/resources_page.html
+++ b/resources_page.html
@@ -137,7 +137,6 @@
     text-align: center;
     border-radius: 20px;
     padding: 0.5vw;
-    color: ;
     margin-right: 20vw;
     margin-left: 25vw;
     margin-top: -30px;
@@ -162,7 +161,6 @@
     margin-left: 5vw;
     margin-top: 10px;
     margin-bottom: -100px;
-    padding: ;
 }
 .card{
     /* position:relative; */
@@ -234,7 +232,7 @@ li {
     <header>
         <div class="header_flexbox">
             <!-- picture of sky logo -->
-            <img src="transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo">
+            <a href="/index.html"><img src="transparent logo.webp" alt="sky logo" width="100px" height="60px" class="logo"></a>
 
             <div class="Technophobes">
                 <h3>Technophobes</h3>
