--- a/V2_agile_design.html
+++ b/V2_agile_design.html
@@ -15,7 +15,7 @@
     <header>
         <div class="header_flexbox">
             <!-- picture of sky logo -->
-            <img src="transparent logo.webp" alt="sky logo" width="100px" height="60px" class="logo">
+            <a href="/index.html"><img src="transparent logo.webp" alt="sky logo" width="100px" height="60px" class="logo"></a>
 
             <div class="Technophobes">
                 <h3>Technophobes</h3>
