--- a/webDev.html
+++ b/webDev.html
@@ -14,7 +14,7 @@
 <body>
     <div class="header_flexbox">
         <!-- picture of sky logo -->
-        <img src="transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo">
+        <a href="/index.html"><img src="transparent logo.webp" alt="sky logo" width="100px" height="60px" class="logo"></a>
 
         <div class="Technophobes">
             <h3>Technophobes</h3>
