--- a/python_flask.html
+++ b/python_flask.html
@@ -270,7 +270,7 @@
     <header>
         <div class="header_flexbox">
             <!-- picture of sky logo -->
-            <img src="transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo">
+            <a href="/index.html"><img src="transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo"></a>
 
             <div class="Technophobes">
                 <h3>Technophobes</h3>
