BA page started

--- a/businessAnalysis.html
+++ b/businessAnalysis.html
@@ -28,15 +28,19 @@
         </ul>
     </div>
     <h1>Business Analysis</h1>
-    <p>Business analysis is all about identifying business needs and determining the soltuions to business problems</p>
-    <p>There are many different processes that are used in business analysis, and on this webpage we will cover three</p>
+    <p style="font-size: 15pt;">Business analysis is all about identifying business needs and determining the soltuions to business problems</p>
+    <p style="font-size: 15pt;">There are many different processes that are used in business analysis, and on this webpage we will cover three</p>
 
     <div id="topHalf">
         <div id="firstInfo">
             <h2 class="infoHeadings">How we applied our knowledge to the project:</h2>
-            <ul>
-                <li>HTML is used to apply the structure of the website.</li>
-                <li>CSS is used to style each page of a website.</li>
+            <ul style="font-size: 15pt;">
+                <li>Resource Audit to identify key resources we would use during our project: </li>
+                <img src="resource_audit.png" style="height: 20vw; width: 30vw;">
+                <br>
+                <br>
+                <li>Stakeholder mapping:</li>
+                <img src="stakeholder_map.png" style="height: 20vw; width: 30vw;">
                 <li>JavaScript is used to add the functionality to the website</li>
             </ul>
             <h3 class="infoHeadings">HTML was used as follows:</h3>
@@ -69,7 +73,7 @@
         </div>
 
         <div class="images">
-            <img class="img" src="https://cdo-curriculum.s3.amazonaws.com/media/uploads/html_element.png" alt="">  
+            <img class="img" src="ba.png" alt="">  
             <img class="img" src="https://web-dev.imgix.net/image/VbAJIREinuYvovrBzzvEyZOpw5w1/hFR4OOwyH5zWc5XUIcyu.svg" alt="">  
             <img class="img" id="jsFunction" src="https://www.programiz.com/sites/tutorial2program/files/javascript-return-statement.png" alt="" background-color:white>   
         </div>
