--- a/aboutUs.html
+++ b/aboutUs.html
@@ -12,19 +12,19 @@
 
 <body>
     <div class="header_flexbox">
-        <a href="/index.html"><img src="transparent logo.webp" alt="sky logo" width="100px" height="60px" class="logo"></a>
+        <a href="/index.html"><img src="transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo"></a>
         <div class="Technophobes">
             <h3>Technophobes</h3>
         </div>
     </div>
     <div id="pages">
         <ul id="pageList">
-            <li class="otherPages" id="aboutUs">About Us</li>
-            <li class="otherPages"  id="resources">Resources</li>
-            <li class="otherPages" id="privacy">Privacy</li>
-            <li class="otherPages" id="legal">Legal</li> 
+            <li class="otherPages" id="aboutUs"><a href="aboutUs.html" style="text-decoration:none; color:white">About Us</a></li>
+            <li class="otherPages"  id="resources"><a href="resources_page.html" style="text-decoration:none; color:white">Resources</a></li>
+            <li class="otherPages" id="legalPrivacy"><a href="legal_page.html" style="text-decoration:none; color:white">Legal & Privacy</a></li>
         </ul>
     </div>
+
     <h1>The Technophobes</h1>
 
     <p>The Technophobes are a diverse group of individuals from many different backgrounds. <br> Since this group has started, we have learnt many things along this bootcamp.</p>
