nav bar styling sorted

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -9,7 +9,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&family=Lato&family=Mukta:wght@200&display=swap" rel="stylesheet">
     <title>About Us</title>
 </head>
+<style>
+    a:link{
+      color: white;
+      text-decoration: none;
+  }
 
+  a:visited{
+      color: white;
+      text-decoration: none;
+  }
+
+  .nav:hover{
+  color:black;
+}  
+</style>
 <body>
     <div class="header_flexbox">
         <a href="/index.html"><img src="transparent logo.webp" alt="sky logo" width="200px" height="100px" class="logo"></a>
@@ -19,9 +33,9 @@
     </div>
     <div id="pages">
         <ul id="pageList">
-            <li class="otherPages" id="aboutUs"><a href="aboutUs.html" style="text-decoration:none; color:white">About Us</a></li>
-            <li class="otherPages"  id="resources"><a href="resources_page.html" style="text-decoration:none; color:white">Resources</a></li>
-            <li class="otherPages" id="legalPrivacy"><a href="legal_page.html" style="text-decoration:none; color:white">Legal & Privacy</a></li>
+            <li class="otherPages" id="aboutUs"><a href="aboutUs.html" class="nav">About Us</a></li>
+            <li class="otherPages"  id="resources"><a href="resources_page.html" class="nav">Resources</a></li>
+            <li class="otherPages" id="legalPrivacy"><a href="legal_page.html" class="nav">Legal & Privacy</a></li>
         </ul>
     </div>
 
