--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <title>Homepage</title>
 </head>
 
+<style>
+      a:link{
+        color: white;
+        text-decoration: none;
+    }
+
+    a:visited{
+        color: white;
+        text-decoration: none;
+    }
+
+    .nav:hover{
+    color:black;
+}  
+</style>
+
 <body>
 
     <div class="header_flexbox">
@@ -25,9 +41,9 @@
 
     <div id="pages">
         <ul id="pageList">
-            <li class="otherPages" id="aboutUs"><a href="aboutUs.html" style="text-decoration:none; color:white">About Us</a></li>
-            <li class="otherPages"  id="resources"><a href="resources_page.html" style="text-decoration:none; color:white">Resources</a></li>
-            <li class="otherPages" id="legalPrivacy"><a href="legal_page.html" style="text-decoration:none; color:white">Legal & Privacy</a></li>
+            <li class="otherPages" id="aboutUs"><a href="aboutUs.html" class="nav">About Us</a></li>
+            <li class="otherPages"  id="resources"><a href="resources_page.html" class="nav">Resources</a></li>
+            <li class="otherPages" id="legalPrivacy"><a href="legal_page.html" class="nav">Legal & Privacy</a></li>
         </ul>
     </div>
 
